package com.medinsight.analytics.enums;

public enum ModelType {
    CLASSIFICATION,
    REGRESSION,
    CLUSTERING,
    NLP,
    LLM
}
