package com.medinsight.audit.enums;

public enum AuditAction {
    CREATE,
    READ,
    UPDATE,
    DELETE,
    LOGIN,
    LOGOUT,
    EXPORT,
    PRINT
}
