package com.medinsight.auth.enums;

public enum UserType {
    PATIENT,
    DOCTOR,
    ADMIN,
    NURSE,
    RECEPTIONIST
}
