package com.medinsight.doctor.enums;

public enum AppointmentType {
    CONSULTATION,
    FOLLOW_UP,
    EMERGENCY,
    ROUTINE_CHECKUP,
    TELEMEDICINE
}
