package com.medinsight.notification.enums;

public enum NotificationType {
    APPOINTMENT_REMINDER,
    APPOINTMENT_CONFIRMATION,
    LAB_RESULT_READY,
    PRESCRIPTION_READY,
    SYSTEM_ALERT,
    PAYMENT_DUE
}
