package com.medinsight.patient.enums;

public enum DocumentType {
    LAB_RESULT,
    PRESCRIPTION,
    IMAGING,
    REPORT,
    CONSENT_FORM
}
