package com.medinsight.patient.enums;

public enum Gender {
    MALE,
    FEMALE,
    OTHER
}
