package com.medinsight.patient.enums;

public enum HistoryStatus {
    ACTIVE,
    RESOLVED,
    CHRONIC,
    INACTIVE
}
