package com.medinsight.patient.enums;

public enum HistoryType {
    DISEASE,
    SURGERY,
    ALLERGY,
    FAMILY_HISTORY,
    MEDICATION
}
