package com.medinsight.report.enums;

public enum ReportType {
    CONSULTATION_SUMMARY,
    LAB_REPORT,
    DISCHARGE_SUMMARY,
    PRESCRIPTION,
    MEDICAL_CERTIFICATE
}
